--- a/JRTP_Counsellors_App/src/main/resources/templates/viewEnquiries.html
+++ b/JRTP_Counsellors_App/src/main/resources/templates/viewEnquiries.html
@@ -47,7 +47,7 @@ h2 {
 	<div class="sidenav">
 		<a href="dashboard">Dashboard</a>
 		 <a href="enquery">Add Enquiries here</a> 
-		 <a href="Enquiries">View Enquiries</a> 
+		 <a href="enquiries">View Enquiries</a> 
 		 <a href="logout">Logout</a>
 	</div>
 
